# Infrastructure/src/main/java/at/ymeri/my/finance/infrastructure/entity/IncomeEntity.java
@@ -56,4 +56,7 @@ public class IncomeEntity {
     @Column(name = "reversal", nullable = false)
     @ColumnDefault("false")
     private boolean reversal;
+
+    @Column(name = "recorded_at")
+    private OffsetDateTime recordedAt;
 }
